<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/contact"
            android:textSize="36sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextColor="@color/gray3"
            app:boxStrokeColor="@color/gray3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/subject_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/subject"
                android:textColor="@color/black"
                android:textColorHint="@color/gray3"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextColor="@color/gray3"
            app:boxStrokeColor="@color/gray3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:textColorHint="@color/gray3"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextColor="@color/gray3"
            app:boxStrokeColor="@color/gray3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_brand_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_brand"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray3"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextColor="@color/gray3"
            app:boxStrokeColor="@color/gray3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_model_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone_model"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray3"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextColor="@color/gray3"
            app:boxStrokeColor="@color/gray3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/system_version_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/system_version"
                android:inputType="text"
                android:textColor="@color/black"
                android:textColorHint="@color/gray3"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:hintTextColor="@color/gray3"
            app:boxStrokeColor="@color/gray3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/message_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/your_message"
                android:inputType="textMultiLine"
                android:minLines="5"
                android:textColor="@color/black"
                android:textColorHint="@color/gray3"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>



        <Button
            android:id="@+id/send_feedback_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/send_feedback"
            android:padding="12dp"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/blue"
            android:textColor="@color/white" />

    </LinearLayout>
</ScrollView>